Get rid of SUN dependency.